# rtl_sdrs

./: .gitignore
c_scanner/: CMakeLists.txt  README.md  scanner  scanner.cpp
c_scanner/rtl_proxy/: CMakeLists.txt  radio_params.txt  rtl_proxy.cpp  rtl_proxy.hpp  test_rtl_proxy.cpp  test_rtl_proxy.hpp
c_scanner/signal_processor/: CMakeLists.txt  test_processor.cpp  test_processor.hpp
py_parts/: requirements.txt  rtl_sdr_proxy.py  set_venv.sh
